# AlgoPrep

./: LICENSE  README.md  start.sh
backend/: .gitignore  pyproject.toml
backend/app/: executor.py  main.py  models.py  problems_data.py  security_data.py
backend/app/routers/: problems.py  security.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: CodeEditor.tsx  DifficultyBadge.tsx  Layout.tsx  PatternBadge.tsx  ProblemCard.tsx  SecurityContentRenderer.tsx  Sidebar.tsx
frontend/src/components/Visualizer/: ArrayVisualizer.tsx  GraphVisualizer.tsx  GridVisualizer.tsx  StepControls.tsx  TreeVisualizer.tsx  index.tsx
frontend/src/hooks/: useTheme.ts
frontend/src/pages/: HomePage.tsx  PatternsPage.tsx  ProblemPage.tsx  ProblemsPage.tsx  SecurityChapterPage.tsx  SecurityPage.tsx
