[tool.poetry]
name = "algo-platform"
version = "0.1.0"
description = "Algorithm study platform for L7/L8 interviews"
authors = ["Dev"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
